test/tests/operators/to_stdout/invalid_pipeline.txt
error: pipeline must return bytes
 --> tests/operators/to_stdout/invalid_pipeline.tql:6:11
  |
6 | to_stdout {
  |           ^ 
  |
